# linux-kernel-module-rust

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  armv7l-linux-kernel-module.json  build.rs  x86_64-linux-kernel-module.json
hello_world/: Cargo.toml  Makefile
hello_world/src/: lib.rs
kernel-cflags-finder/: .cache.mk  Makefile
simple_sysctl/: Cargo.toml  Makefile
simple_sysctl/src/: lib.rs
smsc9512/: Cargo.toml  Makefile
smsc9512/src/: lib.rs
smsc95xx/: Cargo.toml
smsc95xx/src/: lib.rs
src/: allocator.rs  bindgen_helper.h  bindings.rs  c_types.rs  c_wrapper.c  kernel.rs  kernel_module.rs  kernel_result.rs  lib.rs  panic.rs  printk.rs  sync.rs
sync_example/: Cargo.toml  Makefile
sync_example/src/: lib.rs  sync.rs
yes_chardev/: Cargo.toml  Makefile
yes_chardev/src/: lib.rs
