[package]
name = "sync_example"
version = "0.1.0"
authors = ["Li Zhuohua <lizhuohua1994@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
linux-device-driver = { path = ".." }
# interrupt = { path = "../interrupt" }
# callback_function = { path = "../callback_function" }
lazy_static = { version = "0.2.11", features = ["spin_no_std"] }

[profile.release]
panic = "abort"
lto = true

[profile.dev]
panic = "abort"
